@@ -12,6 +12,9 @@ What's New in Python 2.6 release candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #3634: _weakref.ref(Exception).__init__() gave invalid return value on
+  error.
+
 - Issue #3777: long() applied to a float object now always return a long
   object; previously an int would be returned for small values. the __long__
   method is allowed to return either an int or a long, but the behaviour of
